@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Strengthen the cookie generation algorithm for /detach. (caf)
+
 * RANDOM_SOURCE now only affects the rand() scripting function. (caf)
 
 * Make RANDOM_LOCAL_PORTS actually random. (caf)
